# video-recognition

./: VideoRecognition.ipynb  thetis_video_recognition.ipynb
tennis-court-detection/: pyproject.toml
tennis-court-detection/tennis_court_detection/: analysis.ipynb
