[project]
name = "tennis-court-detection"
version = "0.1.0"
description = ""
authors = [
    {name = "Adam Watson",email = "adam.watson1994@hotmail.co.uk"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy (>=2.2.1,<3.0.0)",
    "matplotlib (>=3.10.0,<4.0.0)",
    "opencv-python-headless (>=4.11.0.86,<5.0.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"

